--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     margin: 20px auto;
-    display: grid;
+    grid-area: sidebar;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
 }
