--- a/src/components/SocialMedia/SocialMedia.css
+++ b/src/components/SocialMedia/SocialMedia.css
@@ -3,6 +3,7 @@
 .instagram a:hover {background: #3f729b; color: #fff;}
 
 .field{
+    margin-left: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
