--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,28 +1,9 @@
-.slider {
-    position: static;
-    width: 300px;
-    margin: auto;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-}
-
-.slider-img {
-    position: static;
-    width: 200px;
-    transition: all 6s;
-    transition-timing-function: linear;
-}
-
-.slider-img-prev {
-    transform: translateX(-100%);
-}
-
-.slider-img-next {
-    transform: translateX(100%);
-}
-
-.img{
-    width: 400px;
+.Slider {
+    font-family: sans-serif;
+    text-align: center;
+  }
+.slide-container{
+    grid-area: main;
+    margin: 5px;
+    position: relative;
 }
