--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
     rgba(225, 229, 205),
     rgba(225, 229, 205, 0.5),
     rgba(0, 0, 0, 0.5)
-  ), url("./backgroundFoto.JPG");
+  ), url("./assets/images/PagePhoto/backgroundFoto.JPG");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -25,55 +25,11 @@ body {
   grid-template-rows: auto ;
   }
 
-.App-logo {
-  margin: 30px;
-  height: 10vmin;
-  pointer-events: none;
-
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.logo-dir{
-  display: flex;
-  flex-direction: row;
-}
-
-.App-header {
-  align-items: center;
-  justify-content: center;
-  font-size: 25px;
-  width: 300px;
-}
-
-.App-name {
-  margin-top: 30px;
-  color: rgba(148, 96, 75, 0.5);
-  padding-left: 10px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.logo-name{
-  opacity: 0.2;
-}
 
 .main-content-container {
   grid-area: main;
   background-color: var(--main-background);
-  padding: 20px;
+  padding: 50px;
 }
 
 .routes-container{
