--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,10 +1,53 @@
 .topHeader {
-    grid-area: header;
-    background-color: var(--header-background);
-    color: var(--header-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px 0 calc(20% + 20px);
+  grid-area: header;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 50px;
+  font-size: 25px;
+  width: auto;
+  margin-left: 20%;
+}
+
+.logo-dir {
+  display: flex;
+  flex-direction: row;
+}
+
+
+.App-logo {
+  margin: 15px;
+  height: 30px;
+  pointer-events: none;
+
+}
+
+.App-name {
+  margin-top: 10px;
+  height: 10px;
+  color: rgba(148, 96, 75, 0.5);
+  padding-left: 10px;
+}
+
+.logo-name {
+  height: 60px;
+  opacity: 0.2;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
+}
+
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
